2002-12-18  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/file.py (SubstitutionField): Rework, using
	TupleField as a base class.
	(FileContentsTest.Run): Remove exception-handling code.
	(FileContentsTest.__PerformSubstitutions): Correct.
	* NEWS: Mention change.
	
2002-12-18  Vladimir Prus <ghost@cs.msu.su>
            Mark Mitchell  <mark@codesourcery.com>

	* qm/extension.py (parse_dom_element): Add attachment_store
	parameter.
	* qm/test/classes/xml_database.py: 
	(XMLDatabase._StoreAttachments): New method
	(XMLDatabase.WriteTest): Call it.
	(XMLDatabase.WriteResource): Likewise.
	(XMLDatabase.__ParseTestDocument): Pass store to parse_dom_element.
	(AttachmentStore.__init__): Call base class __init__.
	(AttachmentStore.Store): Correct typo.
	(AttachmentStore.__MakeDataFilePath): Fix path calculation.

2002-12-18  Mark Mitchell  <mark@codesourcery.com>

	* qm/fields.py (ChoiceField): New class.
	* qm/test/test.py (Test.ResourceField): Likewise.
	(Test.TestField): Likewise.
	(Test.arguments): Use them.

2002-12-17  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/result.py (Result): Update documentation string to more
	clearly describe annotations.
	* qm/test/web/web.py (ResultPage.__init__): Do not add a "This
	Test" link to the run menu for a resource.
	(ResultPage.MakeRunUrl): Rename to ...
	(ResultPage.GetRunURL): ... this.
	(ResultPage.GetResultURL): ... new method.
	(StorageResultsStream.GetResult): New method.
	(QMTestServer.HandleShowResults): Use it.
	* qm/test/share/dtml/result.dtml: Display links to resources, as
	appropriate.
	* NEWS: Note that links to results are now available.

2002-12-13  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/web/web.py (NewItemPage.GetClassDescriptions): Use
	self.class_names to get the list of classes.
	* NEWS: Note that "File/New Resource" now operates correctly.

2002-12-02    <Mark Mitchell <mark@codesourcery.com>>

	* qm/test/cmdline.py (QMTest.__ExecuteSummarize): Use binary mode